# wheel-of-misfortune

./: README.md  app.py  pyproject.toml  wheel_of_misfortune_config.json
wheel_of_misfortune/: __init__.py
