[tool.poetry]
name = "wheel-of-misfortune"
version = "0.1.0"
description = ""
authors = ["Ned Webster <edwardpwebster@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.23.1"
streamlit-lottie = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
